mobile overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   background-size: cover;
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  overflow: hidden;
 }
 
 .avatar {
